<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_port"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/movie_mania"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button"
        android:text="@string/register_movies"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading"
        android:onClick="registerMovie"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisplay"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/display_movies"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        android:onClick="displayMovies"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFavourites"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/favourites"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplay"
        android:onClick="favourites"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditMovies"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/edit_movies"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourites"
        android:onClick="editMovies"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSeacrh"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditMovies"
        android:onClick="searchMovies"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRatings"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/ratings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeacrh"
        android:onClick="ratingMovies"/>


</androidx.constraintlayout.widget.ConstraintLayout>